--- a/index.html
+++ b/index.html
@@ -28,7 +28,90 @@
   </head>
   <body>
     <header class="header-section">
-      <div class="header-container container">
+      <div class="container">
+        <div class="mobile-nav-menu" data-menu>
+          <div class="mobile-modal-container">
+            <button class="mobile-btn-close" type="button" data-menu-close>
+              <svg class="mobile-modal-close-icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-mobile-close"></use>
+              </svg>
+            </button>
+            <nav class="nav-section">
+              <ul class="mobile-nav-list">
+                <li class="mobile-link-element">
+                  <a class="nav-links" href="./index.html">Studio</a>
+                </li>
+                <li class="mobile-link-element">
+                  <a class="nav-links" href="">Portfolio</a>
+                </li>
+                <li class="mobile-link-element">
+                  <a class="nav-links" href="">Contacts</a>
+                </li>
+              </ul>
+            </nav>
+            <address class="mobile-adress-section">
+              <ul class="adress-list">
+                <li class="adress-element">
+                  <a class="nav-links" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="adress-element">
+                  <a class="nav-links" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="social-links">
+              <li class="social-item">
+                <a
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  class="soc-link"
+                >
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a
+                  href="https://www.twitter.com/"
+                  target="_blank"
+                  class="soc-link"
+                >
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  class="soc-link"
+                >
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a
+                  href="https://www.linkedin.com/"
+                  target="_blank"
+                  class="soc-link"
+                >
+                  <svg class="social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <nav class="nav-section">
           <a class="logo" href="./index.html"
             >Web<span class="studio-logo">Studio</span></a
@@ -48,24 +131,29 @@
         <address class="adress-section">
           <ul class="adress-list">
             <li class="adress-element">
-              <a class="adress-links" href="mailto:info@devstudio.com"
+              <a class="nav-links" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li class="adress-element">
-              <a class="adress-links" href="tel:+110001111111"
+              <a class="nav-links" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
           </ul>
         </address>
+        <button type="button" class="hamburger-menu" data-menu-open>
+          <svg class="hamburger-svg" width="24" height="24">
+            <use href="./images/icons.svg#icon-hamburger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
       <section class="first-section">
         <div class="container">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
-          <button class="order-service btn-modal" type="button">
+          <button class="order-service" type="button" data-modal-open>
             Order Service
           </button>
         </div>
@@ -76,7 +164,7 @@
           <ul class="quality-list">
             <li class="feature-element">
               <div class="icon-container">
-                <svg width="64" height="64">
+                <svg class="icon-svg" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -130,7 +218,12 @@
           <h2 class="our-team">Our Team</h2>
           <ul class="employee-list">
             <li class="employee-background">
-              <img src="./images/card-image-1.jpg" width="264" alt="card1pic" />
+              <img
+                class="employee-picture"
+                src="./images/card-image-1.jpg"
+                width="264"
+                alt="card1pic"
+              />
               <div class="image-description">
                 <h3 class="employee-name">Mark Guerrero</h3>
                 <p class="employee-occupation">Product Designer</p>
@@ -168,7 +261,12 @@
               </div>
             </li>
             <li class="employee-background">
-              <img src="./images/card-image-2.jpg" width="264" alt="card2pic" />
+              <img
+                class="employee-picture"
+                src="./images/card-image-2.jpg"
+                width="264"
+                alt="card2pic"
+              />
               <div class="image-description">
                 <h3 class="employee-name">Tom Ford</h3>
                 <p class="employee-occupation">Frontend Developer</p>
@@ -207,7 +305,12 @@
             </li>
 
             <li class="employee-background">
-              <img src="./images/card-image-3.jpg" width="264" alt="card3pic" />
+              <img
+                class="employee-picture"
+                src="./images/card-image-3.jpg"
+                width="264"
+                alt="card3pic"
+              />
 
               <div class="image-description">
                 <h3 class="employee-name">Camila Garcia</h3>
@@ -246,7 +349,12 @@
               </div>
             </li>
             <li class="employee-background">
-              <img src="./images/card-image-4.jpg" width="264" alt="card4pic" />
+              <img
+                class="employee-picture"
+                src="./images/card-image-4.jpg"
+                width="264"
+                alt="card4pic"
+              />
 
               <div class="image-description">
                 <h3 class="employee-name">Daniel Wilson</h3>
@@ -294,6 +402,7 @@
             <li class="card-list-element">
               <div class="image-container">
                 <img
+                  class="portfolio-image"
                   src="./images/card-image-5.jpg"
                   alt="card5pic"
                   width="360"
@@ -312,6 +421,7 @@
             <li class="card-list-element">
               <div class="image-container">
                 <img
+                  class="portfolio-image"
                   src="./images/card-image-6.jpg"
                   alt="card6pic"
                   width="360"
@@ -330,6 +440,7 @@
             <li class="card-list-element">
               <div class="image-container">
                 <img
+                  class="portfolio-image"
                   src="./images/card-image-7.jpg"
                   alt="card7pic"
                   width="360"
@@ -348,6 +459,7 @@
             <li class="card-list-element">
               <div class="image-container">
                 <img
+                  class="portfolio-image"
                   src="./images/card-image-8.jpg"
                   alt="card8pic"
                   width="360"
@@ -366,6 +478,7 @@
             <li class="card-list-element">
               <div class="image-container">
                 <img
+                  class="portfolio-image"
                   src="./images/card-image-9.jpg"
                   alt="card9pic"
                   width="360"
@@ -384,6 +497,7 @@
             <li class="card-list-element">
               <div class="image-container">
                 <img
+                  class="portfolio-image"
                   src="./images/card-image-10.jpg"
                   alt="card10pic"
                   width="360"
@@ -405,7 +519,7 @@
       </section>
     </main>
     <footer class="footer-section">
-      <div class="footer-container container">
+      <div class="container">
         <div class="logo-container">
           <a class="footer-logo" href="./index.html"
             >Web<span class="studio-span">Studio</span></a
@@ -416,7 +530,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
+        <div class="footer-social-media">
           <p class="footer-socials-text">Social media</p>
           <ul class="socials-list">
             <li class="socials-element">
@@ -476,9 +590,9 @@
     </footer>
 
     <!-- <========== Modal Container ==========> -->
-    <div class="modal-backdrop">
+    <div class="modal-backdrop" data-modal>
       <div class="modal-window">
-        <button type="button" class="btn-close-modal">
+        <button type="button" class="btn-close-modal" data-modal-close>
           <svg class="btn-close-svg" width="8" height="8">
             <use href="./images/icons.svg#icon-X-icon"></use>
           </svg>
@@ -543,6 +657,7 @@
             ></textarea>
           </div>
 
+          <!-- <========== Terms and conditions ==========> -->
           <div class="terms-container">
             <input
               class="terms-checkbox visually-hidden"
@@ -562,13 +677,16 @@
               <a class="policy-link" href="">Privacy Policy</a>
             </label>
           </div>
+          <!-- <========== Terms and conditions ==========> -->
 
           <button type="button" class="send-button">Send</button>
         </form>
         <!-- <========== Modal Form ==========> -->
       </div>
     </div>
-    <script src="./index.js"></script>
+
+    <script src="./javascript/index.js"></script>
+    <script src="./javascript/menu.js"></script>
 
     <!-- <========== Modal Container ==========> -->
   </body>
